# moodle-test-solver

./: .gitignore  README.md  pyproject.toml  Инструкция_Test_Solver.docx
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
data/: questions.csv
test_solver/: __init__.py  adapter.py  answer_engine.py  browser.py  chrome.py  cli.py  http_client.py  lecture_index.py  models.py  normalize.py  server.py  storage.py  web_search.py  web_search_v2.py
tests/: test_core.py
