[project]
name = "test-solver"
version = "0.1.0"
description = "Local study-test automation with lecture indexing and question database."
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.40",
  "beautifulsoup4>=4.12",
  "certifi>=2024.0",
  "pypdf>=4.0",
  "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
test-solver = "test_solver.cli:main"

[tool.setuptools.packages.find]
include = ["test_solver*"]
exclude = ["lectures*", "tests*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
